diesel-builders/tests/ui_nightly/ancestor_is_self_error.stderr
error: Table cannot be its own `ancestor`
 --> tests/ui_nightly/ancestor_is_self_error.rs:5:25
  |
5 | #[table_model(ancestors(dogs))]
  |                         ^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `dogs`
 --> tests/ui_nightly/ancestor_is_self_error.rs:4:23
  |
4 | #[diesel(table_name = dogs)]
  |                       ^^^^ use of unresolved module or unlinked crate `dogs`
  |
  = help: if you wanted to use a crate named `dogs`, use `cargo add dogs` to add it to your `Cargo.toml`
